--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "autoprefixer": "^9.8.6",
     "clarifai": "^2.9.1",
     "postcss": "^7.0.35",
-    "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
@@ -41,6 +40,9 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
+    ],
+    "devDependencies": {
+    "prettier": "^2.2.1"
+    }
   }
 }
