--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-scripts": "4.0.1",
+		"serve": "^11.3.2",
 		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
 		"web-vitals": "^0.2.4"
 	},
 	"scripts": {
-		"start": "craco start",
+		"start": "serve -s build",
 		"build": "craco build",
 		"test": "craco test",
 		"eject": "react-scripts eject"
